--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/pwa": "^0.7.2",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "firebase-tools": "^4.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
