--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/pwa": "^0.7.3",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
     "firebase-tools": "^4.0.3",
     "rxjs": "^6.0.0",
+    "sw-toolbox": "^3.6.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
