--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
     "firebase-tools": "^4.0.3",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
     "sw-toolbox": "^3.6.0",
     "zone.js": "~0.8.26"
