--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "scrappyard",
-  "short_name": "scrappyard",
+  "name": "scrapyard",
+  "short_name": "scrapyard",
   "theme_color": "#1976d2",
   "background_color": "#ffffff",
   "display": "standalone",
